--- a/frontend/src/components/loaders/loader/Loader.module.scss
+++ b/frontend/src/components/loaders/loader/Loader.module.scss
@@ -1,7 +1,9 @@
-@use '@/utils' as *;
-
 .loader {
-  @include absoluteCenter;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
   display: flex;
   align-items: center;
 
