--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -5,16 +5,17 @@ body {
 
 main {
   flex: 1;
-  padding: 30px 0 60px;
-  position: relative; // for loaders
+
+  display: flex;
+  justify-content: center;
+
+  position: relative; // for loaders and background
 }
 
 #root {
-  max-width: 1200px;
   min-height: 100vh;
   margin: 0 auto;
-  padding: 0 16px;
+
   display: flex;
   flex-direction: column;
-  box-sizing: content-box;
 }
