fix victory sound play

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -13,8 +13,7 @@ main {
 }
 
 #root {
-  min-height: 100vh;
-  margin: 0 auto;
+  min-height: 100dvh;
 
   display: flex;
   flex-direction: column;
