--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,9 @@
 /* regular css file instead of scss for tailwind to work, is there a way to make scss import work? */
+/* mantine with tailwind compatability: https://github.com/orgs/mantinedev/discussions/7459 */
+@layer theme, base, mantine, components, utilities;
 @import 'tailwindcss';
+@import '@mantine/core/styles.layer.css';
+@import '@mantine/dates/styles.layer.css';
 
 @font-face {
   font-family: 'Orbitron';
